[metadata]
name = webp
version = 0.1.5
description = Python bindings for WebP
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/anibali/pywebp
author = Aiden Nibali
project_urls =
    Source=https://github.com/anibali/pywebp
    Issues=https://github.com/anibali/pywebp/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
zip_safe = False
packages = find:
test_suite = tests
# Synchronise with `requires` in `pyproject.toml`
setup_requires =
    setuptools
    wheel
    cffi
    conan
    importlib_resources
install_requires =
    cffi
    Pillow
    numpy

[options.packages.find]
include =
    webp
    webp.*
    webp_build

[options.package_data]
webp_build = *.h, *.c
